--- a/4-ScalableImageView/app/src/main/res/layout/activity_main.xml
+++ b/4-ScalableImageView/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <com.example.river.scalableimageview.CustomView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
         android:src="@mipmap/ic_launcher"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
