--- a/5-WebviewSearch/app/src/main/res/layout/activity_main.xml
+++ b/5-WebviewSearch/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:inputType="text"
+        android:imeOptions="actionDone"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
