--- a/11-Alarm/app/src/main/res/layout/activity_main.xml
+++ b/11-Alarm/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,13 @@
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="Go"
         android:textSize="28sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTime" />
